cmake_minimum_required(VERSION 2.6)
project(w3nco)
set(VERSION v2.0.6)
enable_language (Fortran)
if (NOT CMAKE_BUILD_TYPE)
    set (CMAKE_BUILD_TYPE RELEASE CACHE STRING
        "Choose the type of build, options are: PRODUCTION Debug Release."
        FORCE)
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
  message("setting intel true")
  set(IntelComp true )
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU*" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang*")
  set(GNUComp true )
elseif(CMAKE_CXX_COMPILER_ID MATCHES "pgc*")
  set(PGIComp true )
endif()
MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})
STRING(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "RelWithDebInfo" BUILD_RELEASE)
STRING(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "RELEASE" BUILD_RELEASE)
STRING(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "PRODUCTION" BUILD_PRODUCTION)
STRING(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "DEBUG" BUILD_DEBUG)
if( (BUILD_RELEASE) OR (BUILD_PRODUCTION) )
  if(IntelComp)
    message("setting intel flags")
    set(CMAKE_Fortran_d_FLAGS "-O3 -g -r8 " CACHE INTERNAL "" )
    set(CMAKE_Fortran_8_FLAGS "-r8 -i8 -O3  -g  " CACHE INTERNAL "" )
    set(CMAKE_Fortran_4_FLAGS "-O3 -g " CACHE INTERNAL "" )
    set(CMAKE_C_FLAGS "-O3 -DLINUX " CACHE INTERNAL "" )
  elseif(GNUComp)
    set(CMAKE_Fortran_d_FLAGS "-fno-range-check -O3 -ggdb -fdefault-real-8 -funroll-loops " CACHE INTERNAL "" )
    set(CMAKE_Fortran_8_FLAGS "-fno-range-check -O3 -ggdb -fdefault-integer-8 -fdefault-real-8 -funroll-loops " CACHE INTERNAL "" )
    set(CMAKE_Fortran_4_FLAGS "-fno-range-check -O3 -ggdb -funroll-loops " CACHE INTERNAL "" )
    if(APPLE)
      set(CMAKE_C_FLAGS "-O3 -DAPPLE " CACHE INTERNAL "" )
    elseif(UNIX)
      set(CMAKE_C_FLAGS "-O3 -DLINUX " CACHE INTERNAL "" )
    endif(UNIX)
  else()
    message("unknown compiler!")
    exit()
  endif()
endif()
add_subdirectory(4byte) 
add_subdirectory(8byte) 
add_subdirectory(double) 
